chore: Update drag nodes description and button styles
```

--- a/src/app/create.css
+++ b/src/app/create.css
@@ -7,39 +7,34 @@
   }
   
   .dndflow aside {
-    border-right: 1px solid #eee;
+    border-left: 1px solid #eee;
     padding: 15px 10px;
     font-size: 12px;
-    background: #fcfcfc;
+    background: #ADD8E6;
   }
   
   .dndflow aside .description {
+    font-size: 14px;
+    font-weight: 500;
+    color: black;
     margin-bottom: 10px;
   }
   
   .dndflow .dndnode {
-    height: 20px;
+    
     padding: 4px;
-    border: 1px solid #1a192b;
-    border-radius: 2px;
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: grab;
   }
-  
-  .dndflow .dndnode.input {
-    border-color: #0041d0;
-  }
-  
-  .dndflow .dndnode.output {
-    border-color: #ff0072;
-  }
+
   
   .dndflow .reactflow-wrapper {
     flex-grow: 1;
     height: 100%;
+    width: 100%;
   }
   
   .dndflow .selectall {
@@ -55,4 +50,24 @@
       width: 20%;
       max-width: 250px;
     }
+  }
+
+  .class-node {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    background: white;
+    width: auto;
+  }
+
+  .class-node label {
+    font-size: 12px;
+    font-weight: 500;
+    color: black;
+  }
+
+  .class-node .small-font {
+    font-size: 6px;
+    color: #666;
   }
